# squeeze2

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: encode.rs  lib.rs  plan.rs  probe.rs
docs/: deploy-and-test.md  rewrite-plan.md
